ingress_services.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
     kubernetes.io/ingress.class: redis
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
  annotations:
     kubernetes.io/ingress.class: redis
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
